# common-gh-actions

./: CLAUDE.md  README.md  deploy-template.yml  pyproject.toml
.github/actions/check-deprecations/: action.yml  check_deprecations.py
.github/actions/check-version-bump/: action.yml  check_version_bump.py
.github/actions/extract-version/: action.yml  extract_version.py
.github/actions/initialize/: action.yml
.github/workflows/: deploy-docs.yml  deploy.yml  local-pr.yml  matrix-tests.yml  repo-checks.yml  run-e2e-tests.yml  run-tests.yml
tests/actions/: conftest.py  test_check_deprecations.py  test_check_version_bump.py  test_extract_version.py
